<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cruzer pro</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="history">History</string>
    <string name="speech_prompt">Say something&#58; &#34;who is the nearest driver&#34;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="pick">Pickup Location</string>
    <string name="drop">Drop Location</string>
    <string name="fareest">Fare Estimate</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="icon_tournaments">&#xf091;</string>
    <string name="icon_teams">&#xf0c0;</string>
    <string name="icon_leaderboards">&#xf1ae;</string>
    <string name="icon_community">&#xf086;</string>
    <string name="icon_more">&#xE5D4;</string>
    <string name="icon_basket">&#xf291;</string>
    <string name="icon_pencil">&#xf040;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_fb">&#xf230;</string>
    <string name="icon_question">&#xf059;</string>
    <string name="icon_calender">&#xf073;</string>
    <string name="icon_time">&#xf017;</string>
    <string name="icon_gift">&#xf06b;</string>
    <string name="icon_dropdown">&#xf0d7;</string>
    <string name="icon_close">&#xf00d;</string>
    <string name="icon_add_circle">&#xf055;</string>
    <string name="icon_check_circle">&#xf058;</string>
    <string name="icon_check">&#xf00c;</string>
    <string name="icon_back">&#xf0a8;</string>
    <string name="icon_add_mem">&#xf234;</string>
    <string name="icon_remove_mem">&#xf235;</string>
    <string name="icon_leav">&#xf08b;</string>
    <string name="icon_camera">&#xf030;</string>
    <string name="icon_bell">&#xf0f3;</string>
    <string name="icon_next">&#xf105;</string>
    <string name="icon_prev">&#xf104;</string>
    <string name="icon_play">&#xf01d;</string>
    <string name="icon_filter">&#xf0b0;</string>
    <string name="icon_add">&#xf067;</string>
    <string name="icon_minus">&#xf068;</string>
    <string name="icon_approve">&#xf2c6;</string>
    <string name="icon_reject">&#xf05c;</string>
    <string name="icon_dismiss">&#xf014;</string>
    <string name="icon_unread">&#xf2b6;</string>
    <string name="icon_read">&#xf0e0;</string>
    <string name="icon_trash">&#xf1f8;</string>
    <string name="icon_archive">&#xf187;</string>
    <string name="icon_message">&#xf27a;</string>
    <string name="icon_report">&#xf071;</string>
    <string name="icon_heart">&#xf08a;</string>
    <string name="icon_cart">&#xf07a;</string>
    <string name="icon_username">&#xf007;</string>
    <string name="icon_email">&#xf0e0;</string>
    <string name="icon_warn">&#xf071;</string>
    <string name="icon_location">&#xf124;</string>
    <string name="icon_drop">&#xf041;</string>
    <string name="icon_phone">&#xf098;</string>
    <string name="icon_info">&#xf05a;</string>
    <string name="icon_user">&#xf2be;</string>
</resources>